<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Common -->
    <string name="ok">OK</string>
    <string name="hello">Hello</string>

    <!-- Errors -->
    <string name="error_unknown">We\'ve faced an issue and will fix it soon</string>
    <string name="error_server_connection">Seems like application service is currently down. Please contact your manager for further information</string>
    <string name="error_server_access">You don\'t have enough permissions to perform this operation</string>
    <string name="error_no_internet_connection">Please check your internet connection</string>

    <!-- Credentials -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_invalid_email">Email is not valid</string>
    <string name="error_invalid_password">Password is not valid</string>
    <string name="error_password_empty">Please enter a password</string>
    <string name="error_passwords_not_equal">Confirm password doesn\'t equal pasword</string>

    <!-- Profile -->
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="studying_at">Studying at (optional)</string>
    <string name="role">Role (optional)</string>
    <string name="work_place">Work place (optional)</string>
    <string name="error_invalid_first_name">First name should not be empty</string>
    <string name="error_invalid_last_name">Last name should not be empty</string>

    <!-- Login -->
    <string name="sign_in">Sign In</string>
    <string name="remember_me">Remember me</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_underlined"><u>Sign Up</u></string>

    <!-- Profile -->
    <string name="profile_email">Email</string>
    <string name="profile_studying">Studying at</string>
    <string name="profile_work_place">Workplace</string>
    <string name="profile_role">Role</string>
    <string name="button_edit_profile">Edit profile</string>
    <string name="button_logout"><u>Logout</u></string>

    <!-- Edit profile  -->
    <string name="button_edit_profile_save">Save changes</string>

    <!-- Topics -->
    <string name="topic_enabled_description">Vyo!</string>
    <string name="topic_disabled_description">Skip</string>

    <!-- Tests -->
    <string name="description_test">%d tasks</string>
    <string name="button_tests_add">Add</string>

</resources>