<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:clipToPadding="false"
    android:gravity="center_vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/emoji_image_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:src="@drawable/img_emoji_waving_hand"
        android:contentDescription="@string/hello" />

    <TextView
        style="@style/Text.Medium"
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/color_primary"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputLayout.WithError"
        android:id="@+id/email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/email"
        android:nextFocusDown="@id/password_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Input"
            android:id="@+id/email_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:maxLength="@integer/email_max_length" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputLayout.Password"
        android:id="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/password"
        android:nextFocusDown="@id/sign_in_button"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Input"
            android:id="@+id/password_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        style="@style/Text"
        android:id="@+id/remember_me_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/remember_me" />

    <Button
        style="@style/Button"
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="64dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:text="@string/sign_in" />

    <TextView
        style="@style/Text.Medium"
        android:id="@+id/or_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_gravity="center"
        android:text="@string/or"
        android:textColor="@color/gray_light"
        android:textSize="16sp" />

    <TextView
        style="@style/Text.Medium"
        android:id="@+id/sign_up_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up_underlined"
        android:textColor="@color/color_primary"
        android:textSize="16sp" />

</LinearLayout>