<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="56dp"
        android:paddingBottom="48dp"
        android:paddingHorizontal="16dp"
        android:clipToPadding="false">

        <ImageView
            android:id="@+id/emoji_image_view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/img_emoji_hello_hand"
            android:contentDescription="@string/hello" />

        <TextView
            style="@style/Text.Medium"
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/color_primary"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputLayout.WithError"
            android:id="@+id/email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:maxLength="@integer/email_max_length"
                android:nextFocusDown="@id/first_name_input_edit_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputLayout.WithError"
            android:id="@+id/first_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:maxLength="@integer/name_max_length"
                android:nextFocusDown="@id/last_name_input_edit_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputLayout.WithError"
            android:id="@+id/last_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/surname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:maxLength="@integer/name_max_length"
                android:nextFocusDown="@id/studying_at_input_edit_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputLayout.WithError"
            android:id="@+id/studying_at_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/studying_at">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/studying_at_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text|textCapSentences"
                android:maxLines="1"
                android:maxLength="@integer/taxonomy_max_length"
                android:nextFocusDown="@id/work_place_input_edit_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputLayout.WithError"
            android:id="@+id/work_place_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/work_place">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/work_place_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text|textCapSentences"
                android:maxLines="1"
                android:maxLength="@integer/taxonomy_max_length"
                android:nextFocusDown="@id/role_input_edit_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputLayout.WithError"
            android:id="@+id/role_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/role">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/role_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text|textCapSentences"
                android:maxLines="1"
                android:maxLength="@integer/taxonomy_max_length"
                android:nextFocusDown="@id/password_input_edit_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputLayout.Password"
            android:id="@+id/password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="@integer/password_max_length"
                android:nextFocusDown="@id/confirm_password_input_layout" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputLayout.Password"
            android:id="@+id/confirm_password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/confirm_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="@integer/password_max_length"
                android:imeOptions="actionDone" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            style="@style/Button"
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="64dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:text="@string/sign_up" />

    </LinearLayout>

</ScrollView>