<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="24dp"
            android:clipToPadding="false">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputLayout.WithError"
                android:id="@+id/first_name_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:maxLength="@integer/name_max_length"
                    android:nextFocusDown="@id/last_name_input_edit_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputLayout.WithError"
                android:id="@+id/last_name_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/surname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:maxLength="@integer/name_max_length"
                    android:nextFocusDown="@id/studying_input_edit_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputLayout.WithError"
                android:id="@+id/studying_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/studying_at">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/studying_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text|textCapSentences"
                    android:maxLines="1"
                    android:maxLength="@integer/taxonomy_max_length"
                    android:nextFocusDown="@id/work_place_input_edit_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputLayout.WithError"
                android:id="@+id/work_place_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/work_place">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/work_place_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text|textCapSentences"
                    android:maxLines="1"
                    android:maxLength="@integer/taxonomy_max_length"
                    android:nextFocusDown="@id/role_input_edit_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputLayout.WithError"
                android:id="@+id/role_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/role">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/role_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text|textCapSentences"
                    android:maxLines="1"
                    android:maxLength="@integer/taxonomy_max_length"
                    android:nextFocusDown="@id/password_input_edit_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:minHeight="40dp" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </ScrollView>

    <Button
        style="@style/Button"
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        android:text="@string/button_edit_profile_save" />

</LinearLayout>